docs/api/qiskit/0.37/qiskit.pulse.library.ParametricPulse.mdx
---
title: ParametricPulse (v0.37)
description: API reference for qiskit.pulse.library.ParametricPulse in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.library.ParametricPulse
---

# ParametricPulse

<Class id="qiskit.pulse.library.ParametricPulse" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/pulse/library/parametric_pulses.py" signature="ParametricPulse(duration, name=None, limit_amplitude=None)" modifiers="class">
  Bases: `qiskit.pulse.library.pulse.Pulse`

  The abstract superclass for parametric pulses.

  <Admonition title="Warning" type="caution">
    This class is superseded by [`SymbolicPulse`](qiskit.pulse.library.SymbolicPulse "qiskit.pulse.library.SymbolicPulse") and will be deprecated and eventually removed in the future because of the poor flexibility for defining a new waveform type and serializing it through the [`qiskit.qpy`](qpy#module-qiskit.qpy "qiskit.qpy") framework.
  </Admonition>

  Create a parametric pulse and validate the input parameters.

  **Parameters**

  *   **duration** (`Union`\[`int`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]) – Pulse length in terms of the the sampling period dt.
  *   **name** (`Optional`\[`str`]) – Display name for this pulse envelope.
  *   **limit\_amplitude** (`Optional`\[`bool`]) – If `True`, then limit the amplitude of the waveform to 1. The default is `True` and the amplitude is constrained to 1.

  ## Methods

  <span id="qiskit-pulse-library-parametricpulse-draw" />

  ### draw

  <Function id="qiskit.pulse.library.ParametricPulse.draw" signature="ParametricPulse.draw(style=None, backend=None, time_range=None, time_unit='dt', show_waveform_info=True, plotter='mpl2d', axis=None)">
    Plot the interpolated envelope of pulse.

    **Parameters**

    *   **style** (`Optional`\[`Dict`\[`str`, `Any`]]) – Stylesheet options. This can be dictionary or preset stylesheet classes. See `IQXStandard`, `IQXSimple`, and `IQXDebugging` for details of preset stylesheets.

    *   **backend** (*Optional\[BaseBackend]*) – Backend object to play the input pulse program. If provided, the plotter may use to make the visualization hardware aware.

    *   **time\_range** (`Optional`\[`Tuple`\[`int`, `int`]]) – Set horizontal axis limit. Tuple `(tmin, tmax)`.

    *   **time\_unit** (`str`) – The unit of specified time range either `dt` or `ns`. The unit of `ns` is available only when `backend` object is provided.

    *   **show\_waveform\_info** (`bool`) – Show waveform annotations, i.e. name, of waveforms. Set `True` to show additional information about waveforms.

    *   **plotter** (`str`) –

        Name of plotter API to generate an output image. One of following APIs should be specified:

        ```python
        mpl2d: Matplotlib API for 2D image generation.
            Matplotlib API to generate 2D image. Charts are placed along y axis with
            vertical offset. This API takes matplotlib.axes.Axes as `axis` input.
        ```

        axis and style kwargs may depend on the plotter.

    *   **axis** (`Optional`\[`Any`]) – Arbitrary object passed to the plotter. If this object is provided, the plotters use a given `axis` instead of internally initializing a figure object. This object format depends on the plotter. See plotter argument for details.

    **Returns**

    Visualization output data. The returned data type depends on the `plotter`. If matplotlib family is specified, this will be a `matplotlib.pyplot.Figure` data.
  </Function>

  <span id="qiskit-pulse-library-parametricpulse-get-waveform" />

  ### get\_waveform

  <Function id="qiskit.pulse.library.ParametricPulse.get_waveform" signature="ParametricPulse.get_waveform()" modifiers="abstract">
    Return a Waveform with samples filled according to the formula that the pulse represents and the parameter values it contains.

    **Return type**

    [`Waveform`](qiskit.pulse.library.Waveform "qiskit.pulse.library.waveform.Waveform")
  </Function>

  <span id="qiskit-pulse-library-parametricpulse-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.pulse.library.ParametricPulse.is_parameterized" signature="ParametricPulse.is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    `bool`
  </Function>

  <span id="qiskit-pulse-library-parametricpulse-validate-parameters" />

  ### validate\_parameters

  <Function id="qiskit.pulse.library.ParametricPulse.validate_parameters" signature="ParametricPulse.validate_parameters()" modifiers="abstract">
    Validate parameters.

    **Raises**

    [**PulseError**](pulse#qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameters passed are not valid.

    **Return type**

    `None`
  </Function>

  ## Attributes

  ### duration

  <Attribute id="qiskit.pulse.library.ParametricPulse.duration" />

  ### name

  <Attribute id="qiskit.pulse.library.ParametricPulse.name" />

  ### id

  <Attribute id="qiskit.pulse.library.ParametricPulse.id">
    Unique identifier for this pulse.

    **Return type**

    `int`
  </Attribute>

  ### limit\_amplitude

  <Attribute id="qiskit.pulse.library.ParametricPulse.limit_amplitude" attributeValue="True" />

  ### parameters

  <Attribute id="qiskit.pulse.library.ParametricPulse.parameters">
    Return a dictionary containing the pulse’s parameters.

    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>
</Class>

